--- a/yani150506/index.html.html
+++ b/yani150506/index.html.html
@@ -2,7 +2,7 @@
 </html>
 <header>
     <title>Rumah Rayyan
-        Your personal Hijab store
+        Your Hijab store
     </title>
     <body bgcolor="yellow">
         <h1 align="centre" style ="backgroung-color:purple">
