Baru mengubah warna
Baru mengubah warna background

--- a/Yayuk Wahyuni/index.html.html
+++ b/Yayuk Wahyuni/index.html.html
@@ -6,11 +6,11 @@
  
   <body bgcolor="yellow">
      <div id="header" style="background-color:pink">Hello World! Nama Saya Yayuk Wahyuni</div>
-     <div id="nav" style="background-color:red">Ini div untuk navigasi</div>
+     <div id="nav" style="background-color:hijau">Ini untuk Navigasi</div>
 
      <table border="5" width="100%">
      <tr>
-        <td width="80%"><div id="Article" style="background-color:blue">Article</div></td> <td>Aside</td>
+        <td width="80%"><div id="Article" style="background-color:putih">Article</div></td> <td>Aside</td>
       </tr>
      </table>
 
