--- a/Rondiyah/index2.html
+++ b/Rondiyah/index2.html
@@ -12,7 +12,7 @@
     
     <table border="4" width="100%">
       <tr>
-       <td width="80%"><div id="Artikel" style="background-color:red">Artikel</div></td> <td>Aside</td>
+       <td width="80%"><div id="Artikel" style="background-color:red">Artikel</div></td> <td>Android</td>
       <tr/>
       
     </table>
