--- a/Titin/Index.html
+++ b/Titin/Index.html
@@ -22,10 +22,10 @@
       </h2>
       <p>
           <a href="Gunung Bromo.html">
-              <u>Panorama Gunung Bromo</u></a>
+              <u>Panorama alam</u></a>
       </p>
       <p align="left">
-          <img src=""
+          <img src=
           <img src="images%20(4).jpg" width="200" height="250"/>
           <img src="images%20(7).jpg" width="200" height="200"/>
           <img src="41zQCUoFP+L._SX342_%5B1%5D.jpg" width="250" height="250"/>
