--- a/yani150506/index.html.html
+++ b/yani150506/index.html.html
@@ -25,7 +25,7 @@
                 </td>
                 <td width="13%">brands
                 </td>
-                <td>tentang kami
+                <td>about us
                 </td>
             </tr>
         </table>
