--- a/SITI NURAENI/index.html
+++ b/SITI NURAENI/index.html
@@ -3,10 +3,10 @@
     <title>Webpage pertama</title>
   </header> 
   
-  <body bgcolor="black">
+  <body bgcolor="red">
       <div id="header" style="background-color:green">Hello world! Nama saya Sitinuraeni</div>
     <table border="5" width="100%">
-      <tr><td><div id="nav" style="background-color:red">Ini div untuk navigasi</div></td></tr></table>
+      <tr><td><div id="nav" style="background-color:yellow">Ini div untuk navigasi</div></td></tr></table>
     <table border="5" width="100%">
     <tr>
       <td width="80%"><div id="artikel" style="background-color:blue">Artikel</div></td> <td>aside</td>
