--- a/Rondiyah/index2.html
+++ b/Rondiyah/index2.html
@@ -5,7 +5,7 @@
   </header>
 
   <body bgcolor="pink">
-    <div id="header" style="background-color:green">Hello world! nama saya Rondiyah</div>
+    <div id="header" style="background-color:green">DD_Mobile</div>
     
     <div id="nav" style="background-color:yellow">Ini div untuk navigasi</div>
       
