--- a/Rondiyah/index2.html
+++ b/Rondiyah/index2.html
@@ -7,7 +7,7 @@
   <body bgcolor="pink">
     <div id="header" style="background-color:green">DD_Mobile</div>
     
-    <div id="nav" style="background-color:yellow">Ini div untuk navigasi</div>
+    <div id="nav" style="background-color:yellow">navigasi</div>
     <div id="body" style="background-color:grey">banner</div>
     
     <table border="4" width="100%">
