--- a/Titin/Index.html
+++ b/Titin/Index.html
@@ -26,12 +26,12 @@
       </p>
       <p align="left">
           <img src=
-          <img src="images%20(4).jpg" width="200" height="250"/>
+          <img src="img/20%(4).jpg" width="200" height="250"/>
           <img src="images%20(7).jpg" width="200" height="200"/>
-          <img src="41zQCUoFP+L._SX342_%5B1%5D.jpg" width="250" height="250"/>
+          <img src="img/41zQCUoFP+L._SX342_%5B1%5D.jpg" width="250" height="250"/>
           <img src="Model-Kebaya-Brokat-Modern-Terbaru-2016.jpg" width="200" height="250"/>
           <img src="Contoh-Model-Kebaya-Muslim-Brokat-Modern-Terbaru-2016.jpg" width="280" height="350"/>
-          <img src="eec4814a301ac6c5afbc9a121350c2b6%5B1%5D.jpg" width="200" height+"200"/>
+          <img src="img/eec4814a301ac6c5afbc9a121350c2b6%5B1%5D.jpg" width="200" height+"200"/>
       </p>
       <p align="centre">
           <img src="5f1486bd452676f4f669806b78f5322c%5B1%5D.jpg" width="200" height="=150"/>
