--- a/munapriyatun/index.html
+++ b/munapriyatun/index.html
@@ -1,10 +1,10 @@
 <html>
   <header>
-    <title>Webpage kedua</title>
+    <title>Toko Mey Munah </title>
   </header>
 
   <body bgcolor="yellow">
-    <div id="header" style="background-color:green">Hello World! Nama saya Muna</div>
+    <div id="header" style="background-color:green">Toko Baju Batik Online </div>
     <div id="nav" style="background-color:red">ini div untuk navigasi</div>
       <table border="5"width="100%">
          <tr>
