--- a/Titin/Index.html
+++ b/Titin/Index.html
@@ -26,11 +26,10 @@
       </p>
       <p align="left">
           <img src="img/Jersey-Manchester-United-3rd-2016-2017-Lengan-Panjang%5B1%5D.jpg" width="250" height="300"/>
-      <p> <a href=MU Away><u>Manchester United 3rd Shirt L/S Rp 837.000</u></a></p>
+      <p> <a href=MU Away><u>Manchester United Away Shirt L/S Rp 837.000</u></a></p>
           <img src="img/adidas-manchester-united-2016-2017-ls-away-jersey-5%5B1%5D.jpg" width="250" height="300"/>
-      <p><a href="MU 3trd"><u> Manchester united Away jersey L/S Rp 837.000</u> </a></p>
+      <a href="MU 3trd"><u> Manchester united 3rd jersey L/S Rp 837.000</u> </a>
           <img src="img/13d96d9f-3d4a-4777-9b2c-ec8b60fd449a%5B1%5D.jpg" width="250" height="300"/>
-      <p><a href="MU "
           <img src="img/$_57%5B1%5D.jpg" width="200" height="250"/>
           <img src="img/cheapjerseys-season1617-MU-zcml-0%5B1%5D.jpg"widht="200" height="250"/>
         
