tambah file index.html
paragraf

--- a/Rondiyah/index2.html
+++ b/Rondiyah/index2.html
@@ -20,7 +20,8 @@
       <tr>
        <td width="50%"><div id="Artikel" style="background-color:red">ios</div></td> <td>Android</td>
       <tr/>
+      </table>
       
-    </table>
+      <p>Buy!sell!repair!new phone!used phone!call and check now!</p>
   </body>
 </html>
