--- a/munapriyatun/index.html
+++ b/munapriyatun/index.html
@@ -1,11 +1,16 @@
 <html>
-  <header>
-    <title>Toko Mey Munah </title>
-  </header>
+ <head>
+ <title>Toko Mey Munah </title>
+ </head>
+ <body>
 
+       <TABLE border="1"width="100%" height="100%" align="center"cellspacing="2" cellpadding="5">
+        <TR align="center"height="600">
+            <TD valign="top"
+                Toko Baju Batik Online
   <body bgcolor="yellow">
-    <div id="header" style="background-color:green">Toko Baju Batik Online </div>
-    <div id="nav" style="background-color:red">ini div untuk navigasi</div>
+    <div id="header" style="background-color:green">Toko Mey Munah </div>
+    <div id="nav" style="background-color:red">Toko Baju Batik Online</div>
       <table border="5"width="100%">
          <tr>
             <td width="80%"><div id="artikel" style="background-color:blue">Artikel</div></td> <td>aside</td> 
@@ -13,5 +18,3 @@
          
       </table>
   </body>
- 
-</html>
