--- a/Rondiyah/index2.html
+++ b/Rondiyah/index2.html
@@ -2,13 +2,16 @@
 <html lang-"en">
  <head>
     <meta charset-"utf-8">
-     <title>Home page</title>
+     <title>DDmobile</title>
  </head> 
 <body>
     <div id-"container">
     <header>
-        <div id-"header">
-        <!--logo goes here-->
+        
+        <h1>DD mobile&copy;</h1>
+        <label>
+             search:<input type="search " placeholder="search" autofocus>
+        </label>
         <!--search goes here-->
         <!--navigation goes here-->
         <!--banner goes here-->
