--- a/Rondiyah/index2.html
+++ b/Rondiyah/index2.html
@@ -12,14 +12,27 @@
         <label>
              search:<input type="search " placeholder="search" autofocus>
         </label>
-        <!--search goes here-->
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Service</li>
+                <li>Used phone</li>
+                <li>new phone></li>
+                <li>Accessories</li>
+                <li>Simcard</li>
+                <li>Isi ulang</li>
+                
+            </ul>
+        </nav>
         <!--navigation goes here-->
+        <img src="image/banner/banner.jpg" width="500">
         <!--banner goes here-->
         </div>
     </header>
      <!--main content-->
      <section id="services">
          <h2>services</h2>
+           
          <!--ios phone here-->
          <!--android phone here-->
          <!--windows phone here-->
