--- a/munapriyatun/index.html
+++ b/munapriyatun/index.html
@@ -4,17 +4,30 @@
  </head>
  <body>
 
-       <TABLE border="1"width="100%" height="100%" align="center"cellspacing="2" cellpadding="5">
+       <TABLE border="1"width="100%" height="100%" align="center"cellspacing="3" cellpadding="5">
         <TR align="center"height="600">
             <TD valign="top"
                 Toko Baju Batik Online
-  <body bgcolor="yellow">
-    <div id="header" style="background-color:green">Toko Mey Munah </div>
-    <div id="nav" style="background-color:red">Toko Baju Batik Online</div>
+            
+  <body bgcolor="white">
+            <div id="header" style="background-color:blues" ><b><i><font face="arial"-size="20">Toko Mey Munah</font></i></b> </div>
+            <div id="nav" style="background-color:white"align="right"><i><font face="arial"-size="20">Toko Baju Batik Online</font></i></div>
       <table border="5"width="100%">
          <tr>
-            <td width="80%"><div id="artikel" style="background-color:blue">Artikel</div></td> <td>aside</td> 
+            <td align="center" width="20%">Halaman Utama</td> <td align="center" width="20%">Informasi </td> 
+             <td align="center" width="20%">Daftar Harga</td>
+             <td align="center" width="20%">Kontak Kami</td>
+             <td align="center"  width="20%">Search..</td>
          </tr>
-         
+         <td width="100"><div id="kategori" style="background-color:white">Kategori <ul>
+             <li>Batik Couple</li>
+             <li>Batik Pria</li>
+             <li>Batik Wanita</li>
+             <li>Batik Muslim</li>
+             <li>Dress Batik</li>
+             <li>Gamis Batik</li></ul></div></td>
+          <br>
+           <img src="image/product/model-baju-batik-wanita2.jpg"widht="200"height="200">
+          </br>
       </table>
   </body>
