Cleaned up further for exercise

--- a/Lesson5/exercise.html
+++ b/Lesson5/exercise.html
@@ -1,38 +1,37 @@
 <html>
     <head>
+        <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
         <div id="header" style="background-color:blue">
             Header
         </div>
         <div id="menu" style="background-color:cyan">Menu</div>
-        <div style="display:flex">
-            <div id="navigation"  style="background-color:green; float:left;width:20%">Navigation</div>
-            <div id="content" style="float:left">
-                <div id="highlight">Highlight</div>
-                <div id="highlight">Discounts
-                    <table>
-                        <tr>
-                            <td>
-                                Column 1
-                            </td>
-                            <td>
-                                Column 2
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>2</td>
-                        </tr>
-                        <tr>
-                            <td>3</td><td>4</td>
-                        </tr>
-                        <tr>
-                            <td>5</td><td>6</td>
-                        </tr>
-                    </table>                
-                </div>
+        <div id="navigation"  style="background-color:green;">Navigation</div>
+        <div id="content" style="background-color:orange;">
+            <div id="highlight">Highlight</div>
+            <div id="highlight">Discounts
+                <table>
+                    <tr>
+                        <td>
+                            Column 1
+                        </td>
+                        <td>
+                            Column 2
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>1</td><td>2</td>
+                    </tr>
+                    <tr>
+                        <td>3</td><td>4</td>
+                    </tr>
+                    <tr>
+                        <td>5</td><td>6</td>
+                    </tr>
+                </table>                
             </div>
         </div>
-        <div id="footer" style="background-color:yellow;clear:both">Footer</div>
+        <div id="footer" style="background-color:yellow">Footer</div>
     </body>
 </html>
