--- a/Lesson5/exercise.html
+++ b/Lesson5/exercise.html
@@ -7,12 +7,12 @@
             Header
         </div>
         <div id="menu" style="background-color:cyan">Menu</div>
-        <div id="navigation"  style="background-color:green;">Navigation</div>
-        <div id="content" style="background-color:orange;">
+        <div id="navigation">Navigation</div>
+        <div id="content" style="background-color:orange; float:left">
             <div id="highlight">Highlight</div>
-            <div id="highlight">Discounts
-                <table>
-                    <tr>
+            <div id="discount">Discounts
+                <table id="tabel1" style="border:10px double blue; padding:10px; text-align:center">
+                    <tr class="barispertama">
                         <td>
                             Column 1
                         </td>
@@ -20,7 +20,26 @@
                             Column 2
                         </td>
                     </tr>
+                    <tr style="">
+                        <td>1</td><td>2</td>
+                    </tr>
                     <tr>
+                        <td>3</td><td>4</td>
+                    </tr>
+                    <tr>
+                        <td>5</td><td>6</td>
+                    </tr>
+                </table>                
+                <table id="tabel2" style="border:10px double blue; padding:10px; text-align:center">
+                    <tr class="barispertama">
+                        <td>
+                            Column 1
+                        </td>
+                        <td>
+                            Column 2
+                        </td>
+                    </tr>
+                    <tr style="">
                         <td>1</td><td>2</td>
                     </tr>
                     <tr>
@@ -32,6 +51,6 @@
                 </table>                
             </div>
         </div>
-        <div id="footer" style="background-color:yellow">Footer</div>
+        <div id="ayamkalasan" style="background-color:yellow;clear:both;">Footer</div>
     </body>
 </html>
