--- a/Lylyez/index.html
+++ b/Lylyez/index.html
@@ -1,7 +1,17 @@
 <html>
   <head>
+      <div class="logo"></div>
 
-      <title>ARMADA SOUNDSYSTEM</title>
+      <h1>ARMADA SOUNDSYSTEM</h1>
+      <p></p>
+      </div>
+    
+    <div class="top menu">
+    <ul>
+        <li><a href="#">Halaman Utama</a></li><li><a href="#">Jasa Persewaan</a></li><li><a href="#">Daftar Harga</a></li><li><a href="#">Kontak Kami</a></li>
+        <li><a href="#">Kategori Lainnya</a></li>
+        <li><a href="#" id="Searchtoggl"><i class="fa fa-search fa-lg"></i></a></li></ul>
+    </div>
 
   </head>
 
