tambah logo dan css link
memasukkan link css,insert logo

--- a/yani150506/index.html
+++ b/yani150506/index.html
@@ -6,15 +6,21 @@
     </title>
 </header>
     <body bgcolor="beige">
-        <h1 align="center" style ="backgroung-color:purple" font face="time new roman" font size="17">
-            Rumah Rayyan<br/>Your Personal Hijab Store
-        </h1>
+		<table>
+			<tr>
+				<td><img src="image/logo-quote/logo-bintang.png" width="200px"</td>
+				<td><h1 align="right" style ="backgroung-color:purple" font face="time new roman" font size="17"><i>
+            Rumah Rayyan<br/>Your Personal Hijab Store</i>
+        </h1></td>
+			</tr>
+		</table>
+        
         <div id='header' style="background-color: lightgreen">Selamat datang,sahabat taat, kami disini melayani dengan sentuhan cinta Ibu
         </div>
         <div id="nav" style="background-color:pink">Kepuasan anda adalah prioritas kami</div>
-        <table border="5" width="100%">
-            <tr align="center" bgcolor="grey">
-                <td width="15%">Home
+        <table border="5" width="100%"style="color:white">
+            <tr align="center" bgcolor="grey" >
+                <td width="15%" >Home
                 </td>
                 <td width="15%">Gamis
                 </td>
