--- a/yani150506/index.html
+++ b/yani150506/index.html
@@ -1,6 +1,7 @@
 <html>
 </html>
 <header>
+	 <link rel="stylesheet" href="css/style.css"/>
     <title>Rumah Rayyan
         Your Personal Hijab store
     </title>
@@ -8,7 +9,7 @@
     <body bgcolor="beige">
 		<table>
 			<tr>
-				<td><img src="image/logo-quote/logo-bintang.png" width="200px"</td>
+				<td><img src="image/logo-quote/logo-bunga.png" width="200px"></td>
 				<td><h1 align="right" style ="backgroung-color:purple" font face="time new roman" font size="17"><i>
             Rumah Rayyan<br/>Your Personal Hijab Store</i>
         </h1></td>
@@ -17,8 +18,8 @@
         
         <div id='header' style="background-color: lightgreen">Selamat datang,sahabat taat, kami disini melayani dengan sentuhan cinta Ibu
         </div>
-        <div id="nav" style="background-color:pink">Kepuasan anda adalah prioritas kami</div>
-        <table border="5" width="100%"style="color:white">
+		
+        <div id="nav" style="background-color:pink"> <table border="5" width="100%"style="color:white">
             <tr align="center" bgcolor="grey" >
                 <td width="15%" >Home
                 </td>
@@ -35,11 +36,33 @@
                 <td>About Us
                 </td>
             </tr>
-        </table>
+        </table></div>
+        <div id ="higlight" align="center">Deal Of The Month</div>
+		<table>
+			<tr>
+				<p align="center"> Free ongkir ke Seluruh Pulau Jawa, selama bulan Maret 2017 </p>
+			</tr>
+		</table>
         <br>
+		<table border="5" width="100%">
+			<tr>
+				<div id new arrival align="center"> New Arival</div>
+				<th width="30%">Alila</th>
+				<th width="40%"> Gerai Cinta</th>
+				<th> Zuhdiyya</th>
+				
+			</tr>
+			<td><img src="image/gamis-alila/hari-lavender.jpg" width="200px"</td>
+				<td>
+			</td>
+			<td>
+			</td>
+		</table>
         <table border="5" width="100% height="100%> 
-            <tr width="200px"height="200px" align="center" >
-                <td valign="top">Deal of the week</br>
+		<div id="judul PO" align="center"> Coming Soon,Pre Order(PO)</div>	
+            <tr width="200px"height="200px" align="center">
+				<th> </th>
+                <td valign="top"></br>
             <img src="image/gamis-alila/hari-lavender.jpg" width="200px">
             <p>Gamis Hari</br>
         Bahan :wolfis</br>
