--- a/Lylyez/index.html
+++ b/Lylyez/index.html
@@ -2,7 +2,7 @@
   <head>
       <div class="logo"></div>
 
-      <h1>ARMADA SOUNDSYSTEM</h1>
+      <h1>ARMADA SOUNDSYSTEM Test</h1>
       <p>Melayani dengan sepenuh Hati</p>
       </div>
     </head>
