--- a/Lylyez/Project_01 Alex/about.html
+++ b/Lylyez/Project_01 Alex/about.html
@@ -1,8 +1,7 @@
 <html>
     <head>
-
-<link rel="stylesheet" href="css/style.css">
-        <title>Resep Makan</title>
+        <link rel="stylesheet" href="css/style.css">
+        <title>Resep Makan - About</title>
     </head>
     <body>
         <div id="div-header">
@@ -48,28 +47,15 @@
                         <img src="images/sidebar-ads.gif" id="img-sidebar-ads"/>
                     </td>
                     <td id="td-body-content">
-                        <div class="div-content-title">Resep Masak: Ayam Kalasan</div>
-                        <div class="div-content-brief"><img src="images/ayam-goreng-kalasan.jpg" class="img-content"/>
-                            Kalian pernah mencicipi ayam goreng kalasan? Bagi yang tinggal atau berasal dari daerah asalnya tentu sudah pada tau ya. Sesuai namanya, makanan khas yang satu ini berasal dari daerah Kalasan, Yogyakarta.
-                            <br><br>
-                            Ayam goreng kalasan terkenal dengan bumbunya yang meresap sampai kedalam daging, dengan cita rasa yang kuat serta tekstur daging yang empuk. Bagi kalian yang penasaran akan rasanya, yuk kita coba membuatnya!
-                            <br>
-                            Baca selengkapnya di <a href="resep.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Menerima Pesanan</div>
+                        <div class="div-content-title">Tentang Resep Masak</div>
                         <div class="div-content-brief">
-                            Kami menerima pesanan catering untuk acara keluarga, pesta ulang tahun, dan pelbagai keperluan untuk maksimal 100 porsi makanan. Untuk memesan, dapat menghubungi kami di <a href="contact.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Wisata Kuliner: Bandung</div>
-                        <div class="div-content-brief">
-                            Saat kita berada di suatu tempat tentunya kita penasaran dan ingin tau apa saja yang ada di kota tersebut. Bahkan tak segan-segan kita ingin menjajalnya langsung, entah hal itu dari tempat wisata ataupun dari wisata kulinernya. Begitu pula halnya saat anda sedang berada di kota Bandung.
+                            Resep Masak adalah sebuah portal khusus yang dibuat bagi para pencinta kuliner. Intinya ini dibuat untuk orang-orang yang suka makan. Resep bisa berarti dua: dalam bahasa Indonesia adalah bahan dan cara membuat sesuatu, namun dalam bahasa Sunda artinya adalah 'suka'. Resep Makan adalah sebuah website di mana Anda dapat melihat resep-resep masakan sekaligus juga menjadi wadah informasi bagi Anda para penyuka makanan, para penggila kuliner. 
                             <br><br>
-                            Saat anda menyantap menu makanan yang ada di Bandung tentunya akan menjadi pengalaman tersendiri yang sangat mengesankan. Tapi, taukah anda tempat wisata kuliner Bandung murah dan enak?
-                            Baca selengkapnya di <a href="wiskul.html">sini</a>.
+                            Di sini Anda akan mendapatkan informasi seputar resep masakan khas Indonesia yang bisa Anda coba sendiri di rumah, sekaligus juga informasi mengenai spot-spot kuliner apa saja yang ada di kota-kota di Indonesia. 
+                            <br><br>
+                            Selamat menjelajahi portal kuliner nusantara!
+                            <br><br><br>
+                            Salam, editor.
                         </div>
                     </td>
                     <td class="td-invisible"></td>
