--- a/Lylyez/Project_01 Alex/contact.html
+++ b/Lylyez/Project_01 Alex/contact.html
@@ -1,8 +1,7 @@
 <html>
     <head>
-
-<link rel="stylesheet" href="css/style.css">
-        <title>Resep Makan</title>
+        <link rel="stylesheet" href="css/style.css">
+        <title>Resep Makan - Hubungi Kami</title>
     </head>
     <body>
         <div id="div-header">
@@ -48,28 +47,17 @@
                         <img src="images/sidebar-ads.gif" id="img-sidebar-ads"/>
                     </td>
                     <td id="td-body-content">
-                        <div class="div-content-title">Resep Masak: Ayam Kalasan</div>
-                        <div class="div-content-brief"><img src="images/ayam-goreng-kalasan.jpg" class="img-content"/>
-                            Kalian pernah mencicipi ayam goreng kalasan? Bagi yang tinggal atau berasal dari daerah asalnya tentu sudah pada tau ya. Sesuai namanya, makanan khas yang satu ini berasal dari daerah Kalasan, Yogyakarta.
-                            <br><br>
-                            Ayam goreng kalasan terkenal dengan bumbunya yang meresap sampai kedalam daging, dengan cita rasa yang kuat serta tekstur daging yang empuk. Bagi kalian yang penasaran akan rasanya, yuk kita coba membuatnya!
-                            <br>
-                            Baca selengkapnya di <a href="resep.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Menerima Pesanan</div>
+                        <div class="div-content-title">Hubungi Kami</div>
                         <div class="div-content-brief">
-                            Kami menerima pesanan catering untuk acara keluarga, pesta ulang tahun, dan pelbagai keperluan untuk maksimal 100 porsi makanan. Untuk memesan, dapat menghubungi kami di <a href="contact.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Wisata Kuliner: Bandung</div>
-                        <div class="div-content-brief">
-                            Saat kita berada di suatu tempat tentunya kita penasaran dan ingin tau apa saja yang ada di kota tersebut. Bahkan tak segan-segan kita ingin menjajalnya langsung, entah hal itu dari tempat wisata ataupun dari wisata kulinernya. Begitu pula halnya saat anda sedang berada di kota Bandung.
+                            Kami menerima pesanan catering untuk acara keluarga, pesta ulang tahun, dan pelbagai keperluan untuk maksimal 100 porsi makanan. Anda dapat menghubungi kami di:
+                            <ul>
+                                <li>Nomor Telepon: 0812-XXXX-XXXX</li>
+                                <li>Alamat: Jl. XXXXXXXXXXX No.XX Jakarta Barat XXXXXX</li>
+                                <li>E-Mail Address: resepmakan@xxxx.com</li>
+                            </ul>
+                            Untuk pengiriman SMS dan email, mohon sertakan data diri Anda supaya kami dapat menindak lanjuti keperluan Anda. Terima kasih sudah menghubungi kami.
                             <br><br>
-                            Saat anda menyantap menu makanan yang ada di Bandung tentunya akan menjadi pengalaman tersendiri yang sangat mengesankan. Tapi, taukah anda tempat wisata kuliner Bandung murah dan enak?
-                            Baca selengkapnya di <a href="wiskul.html">sini</a>.
+                            -Resep Makan-
                         </div>
                     </td>
                     <td class="td-invisible"></td>
