--- a/Lylyez/Project_01 Alex/resep.html
+++ b/Lylyez/Project_01 Alex/resep.html
@@ -1,8 +1,7 @@
 <html>
     <head>
-
-<link rel="stylesheet" href="css/style.css">
-        <title>Resep Makan</title>
+        <link rel="stylesheet" href="css/style.css">
+        <title>Resep Makan - Resep Masakan</title>
     </head>
     <body>
         <div id="div-header">
@@ -53,23 +52,20 @@
                             Kalian pernah mencicipi ayam goreng kalasan? Bagi yang tinggal atau berasal dari daerah asalnya tentu sudah pada tau ya. Sesuai namanya, makanan khas yang satu ini berasal dari daerah Kalasan, Yogyakarta.
                             <br><br>
                             Ayam goreng kalasan terkenal dengan bumbunya yang meresap sampai kedalam daging, dengan cita rasa yang kuat serta tekstur daging yang empuk. Bagi kalian yang penasaran akan rasanya, yuk kita coba membuatnya!
-                            <br>
-                            Baca selengkapnya di <a href="resep.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Menerima Pesanan</div>
-                        <div class="div-content-brief">
-                            Kami menerima pesanan catering untuk acara keluarga, pesta ulang tahun, dan pelbagai keperluan untuk maksimal 100 porsi makanan. Untuk memesan, dapat menghubungi kami di <a href="contact.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Wisata Kuliner: Bandung</div>
-                        <div class="div-content-brief">
-                            Saat kita berada di suatu tempat tentunya kita penasaran dan ingin tau apa saja yang ada di kota tersebut. Bahkan tak segan-segan kita ingin menjajalnya langsung, entah hal itu dari tempat wisata ataupun dari wisata kulinernya. Begitu pula halnya saat anda sedang berada di kota Bandung.
                             <br><br>
-                            Saat anda menyantap menu makanan yang ada di Bandung tentunya akan menjadi pengalaman tersendiri yang sangat mengesankan. Tapi, taukah anda tempat wisata kuliner Bandung murah dan enak?
-                            Baca selengkapnya di <a href="wiskul.html">sini</a>.
+                            Bumbu-bumbu yang digunakan untuk memasak ayam kalasan sebenarnya merupakan bumbu dasar, hanya saja cara masaknya yang berbeda. Beberapa resep ada yang menyertakan soda kue saat merebusnya, ada juga yang menggunakan air kelapa dan santan. Dengan demikian pasti sudah dapat ditebak jika cita rasa dari ayam goreng ini dominan dengan rasa gurih. Ditambah lagi dengan sambal khas yang menggugah selera, mantap bingits.
+                            <br><br>
+                            Bahan-bahan Resep Ayam Goreng Kalasan Asli
+                            <ul>
+                                <li>1 ekor daging ayam kampung, potong 4</li>
+                                <li>2 sdm perasan jeruk nipis</li>
+                                <li>1 sdt garam</li>
+                                <li>2 btg serai, memarkan</li>
+                                <li>2 lbr daun salam</li>
+                                <li>4 lbr daun jeruk</li>
+                                <li>santan dari 1 butir kelapa, gunakan air kelapa untuk membuat santan</li>
+                                <li>minyak goreng yang banyak</li>
+                            </ul>
                         </div>
                     </td>
                     <td class="td-invisible"></td>
