--- a/Lylyez/Project_01 Alex/wiskul.html
+++ b/Lylyez/Project_01 Alex/wiskul.html
@@ -1,8 +1,7 @@
 <html>
     <head>
-
-<link rel="stylesheet" href="css/style.css">
-        <title>Resep Makan</title>
+        <link rel="stylesheet" href="css/style.css">
+        <title>Resep Makan - Wisata Kuliner</title>
     </head>
     <body>
         <div id="div-header">
@@ -48,28 +47,21 @@
                         <img src="images/sidebar-ads.gif" id="img-sidebar-ads"/>
                     </td>
                     <td id="td-body-content">
-                        <div class="div-content-title">Resep Masak: Ayam Kalasan</div>
-                        <div class="div-content-brief"><img src="images/ayam-goreng-kalasan.jpg" class="img-content"/>
-                            Kalian pernah mencicipi ayam goreng kalasan? Bagi yang tinggal atau berasal dari daerah asalnya tentu sudah pada tau ya. Sesuai namanya, makanan khas yang satu ini berasal dari daerah Kalasan, Yogyakarta.
-                            <br><br>
-                            Ayam goreng kalasan terkenal dengan bumbunya yang meresap sampai kedalam daging, dengan cita rasa yang kuat serta tekstur daging yang empuk. Bagi kalian yang penasaran akan rasanya, yuk kita coba membuatnya!
-                            <br>
-                            Baca selengkapnya di <a href="resep.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
-                        <div class="div-content-title">Menerima Pesanan</div>
-                        <div class="div-content-brief">
-                            Kami menerima pesanan catering untuk acara keluarga, pesta ulang tahun, dan pelbagai keperluan untuk maksimal 100 porsi makanan. Untuk memesan, dapat menghubungi kami di <a href="contact.html">sini</a>.
-                        </div>
-                        <br>
-                        <hr>
                         <div class="div-content-title">Wisata Kuliner: Bandung</div>
                         <div class="div-content-brief">
                             Saat kita berada di suatu tempat tentunya kita penasaran dan ingin tau apa saja yang ada di kota tersebut. Bahkan tak segan-segan kita ingin menjajalnya langsung, entah hal itu dari tempat wisata ataupun dari wisata kulinernya. Begitu pula halnya saat anda sedang berada di kota Bandung.
                             <br><br>
                             Saat anda menyantap menu makanan yang ada di Bandung tentunya akan menjadi pengalaman tersendiri yang sangat mengesankan. Tapi, taukah anda tempat wisata kuliner Bandung murah dan enak?
-                            Baca selengkapnya di <a href="wiskul.html">sini</a>.
+                            <br><br>
+                            Untuk membuka, tempat wisata kuliner di Bandung yang kami rekomendasikan pertama adalah Nasi Kalong. Tempat wisata kuliner nasi kalong masuk dalam daftar salah satu tempat makan yang populer di kota Kembang. Lokasinya berada di jalan RE Martadinata, Bandung.
+                            <br><br>
+                            Sesuai dengan namanya “Nasi Kalong”, tempat ini buka pada waktu malam hari, yang dimulai pada pukul 07.00 sampai dini hari. Para pelanggannya rata-rata adalah orang yang suka berburu makanan pada malam hari. Jadi, saat anda sedang berlibur di kota Bandung dan kemudian anda merasa lapar pada malam hari, silahkan datang ke wisata kuliner Bandung malam hari Nasi Kalong ini untuk meredakan rasa lapar anda.
+                            <br><br>
+                            Nasi Kalong ini menyediakan beraneka ragam lauk beserta nasi. Uniknya, nasi di sini tidak berwarna putih melainkan berwarna hitam. Sebenarnya nasi hitam ini adalah nasi merah yang dimasak dengan kluwek yang ditambahi kelapa parut goreng, cabai, bawang merah, dan bumbu-bumbu lainnya sehingga menghasilkan nasi hitam yang terasa gurih lezat.
+                            <br><br>
+                            Jika anda ingin mencari tempat wisata kuliner di Bandung, tak ada salahnya anda mencoba tempat-tempat di atas sebagai rujukan yang akan anda kunjungi.
+                            <br><br>
+                            -red-
                         </div>
                     </td>
                     <td class="td-invisible"></td>
