--- a/Lylyez/Armada.html
+++ b/Lylyez/Armada.html
@@ -1,13 +1,12 @@
 <html>
  <head>
      <link rel="stylesheet" href="css/style.css">
-     
     <title>ARMADA SOUNDSYSTEM</title>
- </head>
-  <body>
-   <div id="wrapper">
-     <table width 90%">
-        <tr>
+</head>
+<body>
+    <div class="wrapper">
+        <table width="90%">
+         <tr>
           <td width="30%">  
            <img src="Image/logo/logoarmada.png">
           </td>
@@ -17,9 +16,9 @@
         </tr>
         </table>
     </div>    
-    <div id="header"> 
-    </div>
-    <div id="menu">
+       <div class="header">
+       </div>
+       <div class="menu">
            <table border="1" width="90%"  bgcolor="skyblue">
             <tr>
              <td>
@@ -45,7 +44,7 @@
             </tr>
            </table>          
         </div >
-        <div id="conttent">
+        <div class="conttent">
             <table width="90%">
              <tr>
               <td width="30%" height="300">
@@ -64,7 +63,7 @@
           <tr>
            <td>    
              <p>
-             <img src="ico/cry.jpg" size="50px"/> 
+             <img src="icon/cry.jpg" size="50px"/> 
              Armada soundsystem merupakan website penyediaan jasa persewaan aneka kebutuhan acara, seperti; pernikahan, khitanan, reoni, ulangtahun,pentas seni dan masih banyak lagi menyediakan lengkap semua yg anda butuhkan dalam pesta</p>
             <p>Acara jadi akan lebih meriah, praktis dan ekonomis karena Armada soumdsytem memberikan untuk penyewa lebih banyak jenis kategori bahkan penyewa bisa memilih barang yg akan disewa sesuai dengan kebutuhan.</p>
          </td>
