--- a/Jamilah/Project_01 Alex/index.html
+++ b/Jamilah/Project_01 Alex/index.html
@@ -4,7 +4,7 @@
         <title>Resep Makan</title>
     </head>
     <body>
-        <div id="div-header">
+         <div id="div-header">
             <table id="table-header">
                 <tr>
                     <td class="td-invisible"></td>
@@ -90,4 +90,4 @@
             </table>
         </div>
     </body>
-</html>
+<html></html>
