mengubah index.html
mengubah index.html

--- a/Jamilah/css1.html
+++ b/Jamilah/css1.html
@@ -18,7 +18,7 @@ body {
 #td-logo{
     width: 15%;
     text-align: center;
-    background-color: white;
+    background-color: grey;
 }
 
 #img-logo{
@@ -28,7 +28,7 @@ body {
 
 #td-header {
     width: 65%;
-    background-color:orangered;
+    background-color:white;
 }
 
 #table-header-nav{
