--- a/munapriyatun/index.html
+++ b/munapriyatun/index.html
@@ -44,6 +44,6 @@
                   </table>
                   <br>
         <table border="2"widht="50" align="right">
-                  <img src="image/product/bajubatik.jpg" width="150"height="150"><p style="color:green;">Batik Muslim <br>Rp200.000,</p><img src="image/product/batikpria.html"width="150" height="150"></table>
+                  <img src="image/product/bajubatik.jpg" width="150"height="150"><p style="color:green;">Batik Muslim <br>Rp200.000,</p><img src=""width="150" height="150"></table>
             
                                     
