--- a/Susilowati/index.html
+++ b/Susilowati/index.html
@@ -11,20 +11,24 @@
 	  <br>
     <div></div>
 	  <table border="2"width="100%">
-         <tr>
-            <td>Home</td> 
-             <td>Kategori</td>
-             <td>Cara Pemesanan</td>
-             <td>Bahan</td>
+         <tr align="center">
+            <td id="td-body-sidebar">
+				<ul id="ul-sidebar"><li class="li-sidebar"><a href="Home.html"class="a-sidebar">Home</a></li></ul></td><td id="td-body-sidebar">
+			 <ul id="ul-sidebar">
+				 <li class="li-sidebar"><a href="Kategori.html"class="sidebar">Kategori</a></li></ul></td>
+			 <td id="td-body-sidebar">
+			 <ul id="ul-sidebar">
+				 <li class="li-sidebar"><a href="Bahan.html"class="a-sidebar">Bahan</a></li></ul></td>
+			 <td id="td-body-sidebar">
+				 <ul id="ul-sidebar"><li class="li-sidebar"><a href="Cara Pemesanan.html"class="a-sidebar">Cara Pemesanan</a></li></ul></td>
           </tr>
 	  </table>
             <br>
-	  <table>
-          <tr>
-              <td>SMS:082174527973</td>
-              <td>WA:082174527973</td>
-              <td>BBM:5C0CAF99</td>
-            <br>  <td>EMAIL:watisusilowati63@gmail.com</td>
+	  <table border="2"width="100%">
+          <tr align="center">
+			  <td>SMS:082174527973</td>
+			  <td>WA:082174527973</td>
+              <td>BBM:5C0CAF99</td> <td>EMAIL:watisusilowati63@gmail.com</td>
           </tr>
 	  </table>
 	         <br>
@@ -50,7 +54,18 @@
 			  <td><img src="image/syari/mariam%20syari%205.jpg"/ width="200px"></td>
 			  <td><img src="image/syari/mariam%20syari%206.jpg"/ width="200px"></td>
 			  <td><img src="image/syari/miranda%20syari.jpg"/ width="200px"></td>
+			  <td><img src="image/syari/shangrilla%20syari.jpg"/ width="200px"></td>
+			  <td><img src="image/syari/zola%20syari.jpg"/ width="200px"></td>
+			  
 		  </tr>
+			<tr>
+			   <td><img src="image/syari/rossy%20syari.jpg"/ width="200px"></td>
+			   <td><img src="image/syari/khadijah%20syari.jpg"/ width="200px"></td>
+				<td><img src="image/syari/pink%20syari.jpg"/ width="200px"></td>
+				<td><img src="image/syari/azayo%20(peach).jpg"/ width="200px"></td>
+				<td><img src="image/syari/azayo%20(mint).jpg"/ width="200px"></td>
+				<td><img src="image/syari/azayo%20(mocca).jpg"/ width="200px"></td>
+			</tr>
 		  <tr>
 		  	<td align="center" colspan="4">susi hijab syar'i.com | <a href="mailto:watisusilowati63@gmail.com">Kontak: watisusilowati63@gmail.com</a></td>
 		  </tr>
