--- a/Rondiyah/display.html
+++ b/Rondiyah/display.html
@@ -20,7 +20,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="usedphone.html">Used Phone</a> </li>
                 <li><a href="newphone.html">New Phone</a></li>
-                <li><a href="accessories.html">Accessories</a></li>
+                <li><a href="">Accessories</a></li>
                 <li><a href="">Top Up</a></li>
                 <li><a href="">Contact Us</a></li>
 			</ul>
