--- a/Rondiyah/services.html
+++ b/Rondiyah/services.html
@@ -16,13 +16,13 @@
 </header>
 <nav>
 			<ul id="navigation">
-				<li><a href="diox.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="usedphone.html">Used Phone</a> </li>
-                <li><a href="">New Phone</a></li>
-                <li><a href="">Accessories</a></li>
-                <li><a href="">Simcard</a></li>
+                <li><a href="newphone.html">New Phone</a></li>
+                <li><a href="accessories.html">Accessories</a></li>
                 <li><a href="">Top Up</a></li>
+                <li><a href="">Contact Us</a></li>
 			</ul>
 </nav> 
 <article>
