--- a/Lylyez/Informasi.html
+++ b/Lylyez/Informasi.html
@@ -86,10 +86,12 @@
         </div>
         <table border="1">
         <tr>
-            <td>
+            <td hight="60">
             <img src="Image/lain-lain/testikebaya.jpg"/>
             </td>
-            <td></td>
+            <td hight="60">
+            <img src="Image/lain-lain/testimahar.jpg"/>
+            </td>
             <td></td>
         </tr>
         </table>
