--- a/Lylyez/index.html
+++ b/Lylyez/index.html
@@ -67,7 +67,7 @@
         <td>
          <img src="Image/kursi/kursiputih_mejabiru.png"/>
         <td>    
-         <img src="Image/kursi/kursi_mejaputih.png"/>
+         <img src="Image/lain-lain/testimahar.jpg"/>
         </td>
        </td>
       </tr>  
