Membuat indek baru

--- a/Yayuk Wahyuni/HTML/Mencoba/shifaa.index.html
+++ b/Yayuk Wahyuni/HTML/Mencoba/shifaa.index.html
@@ -1,6 +1,8 @@
+<!---belum jadi--->
+
 <html>
     <head>
-        <link rel="stylesheet" href="Mencoba.style.css">
+        <link rel="stylesheet" href="styleshifaa.css.css">
         <title>SHIFAA CELLULAR</title>
     </head>
     <body>
