--- a/yani150506/index.html
+++ b/yani150506/index.html
@@ -23,15 +23,15 @@
 			</tr>
 					<tr>
 						<td></td>
-						<td align="left"><a href="index.html-yani150506">Home </a>
+						<td align="left"><a href="index.html">Beranda </a>
 						</td>
 						<td> <a href="gamis1.html">
 					Gamis</a>
 						</td>
-						<td><a href="sharing.html">Sharing </a>
+						<td><a href="sharing.html">Yuk Berbagi </a>
 						</td>
 						
-						<td>About Us</td>
+						<td>Tentang Kami</td>
 					</tr>
 			</table>
 			
@@ -53,7 +53,7 @@
         <div >
 			<!--pake colspan, mama-->
 					<table >
-						<table align="center" width="80%" border="3">
+						<table align="center" width="80%" border="1">
 						<tr><h2 align="center">
 							<th colspan="4"> New Arrival</th></h2>
 						</tr>
