--- a/Susilowati/Bahan.html
+++ b/Susilowati/Bahan.html
@@ -6,11 +6,11 @@
   <body>
 	  <div id="judul" > 
 		  
-		  <h1 > <i>SUSI HIJAB SYAR'I</i></h1>
+		  <h1 > <i>SUSI HIJAB SYAR'I.COM </i></h1>
 </div>
 	  <br>
     <div></div>
-	  <table width="100%">
+	  <table border="2"width="100%">
          <tr align="center">
             <td id="td-body-sidebar">
 				<ul id="ul-sidebar"><li class="li-sidebar"><a href="index.html"class="a-sidebar">Beranda</a></li></ul>
@@ -33,10 +33,10 @@
           </tr>
 	  </table>
 	        <br>
-	    <table width="100%">
+	    <table border="2"width="100%">
           <tr>
               <td><img src="image/syari/ummi%20syari%20(moka).jpg"/ width=
-					   "200px"></td>
+					   "200px"><p style="color:"></p></td>
               <td><img src="image/syari/ummi%20syari%20(black).jpg"/ width="200px"></td>
               <td><img src="image/syari/orjinal%20hijab%20(yelow).jpg"/ width="200px"></td>
               <td><img src="image/syari/orijinal%20hijab%20(pink).jpg"/ width="200px"></td>
