--- a/Titin/Foodball accessories.html
+++ b/Titin/Foodball accessories.html
@@ -21,9 +21,10 @@
               <td valign="centre" bgcolor="red"><font color="white" face="Arial">Jeseys</font></td> 
                <td valign="centre" bgcolor="light green"><font color="white" face="Arial">Informasi</font></td> 
          </tr></table>
+              
               <Table border="1" width="100%" height="10%" align="on top" cellspacing="2" cellpadding="3" >
-          <tr align="top" height="500">
-          <td valign="top">
+                <tr align="top" height="500">
+                 <td valign="top">
               <a JerseyMens.html></a>
               <img src="img/Mens/phase4-01%5B1%5D.jpg" width="300" height="200">
               <p style="color:green;">NAME SET EURO JERSEYS</p>
@@ -42,19 +43,15 @@
                           <td> <img src="img/Bola/41SDlIGrkVL%5B1%5D.jpg" width="140" height="150"><br>Rp 272.000</td>
                           <td><img src="img/Bola/ball%5B1%5D.jpg" width="170" height="150"><br>Rp 272.000</td>
                       </tr>
-                      <tr><td><img src="img/scarf/lfc2.jpg" width="200" height="60"><br>Rp 235.000</td> </tr>
+                      <tr>
+                          <td><img src=  <br>Rp 235.000</td> </tr>
                       <tr>
                           <TD valign="Top" bgcolor="white">
         <table width="100%">
                    <tr align="Top" height="20">
                    <font color="White" face="time new roman" sice="20" align="left"img/Bola/barcelona-soccer-ball-football-2014-2015-crimson%5B1%5D.jpg><b><i>Foodball accessories</i></b></font>
             </tr>    
-            <tr><td><p style="color:red;">SPECIAL OFFER</p>
-                       <img src="img/Mens/germany2012.jpg" width="150" height="150">
-                       <p>Germany home 2012 <br>Rp375.000,-</p> 
-                       <td><img src="img/Mens/england-euro-2016-kits-leaked-2%5B1%5D.jpg" width="150" height="150"> <br>Rp 375.000
-                       <td><img src="img/Mens/lfc_crownpaints.jpg" width="150" height="150"> <br>Rp 846.000
-                       </td></tr>
+            
             </table>
                  </TD>
                       </tr>
