--- a/Titin/Index.html
+++ b/Titin/Index.html
@@ -16,9 +16,9 @@
             </td>
      </table>
                 
-     <table border="1" width="100%" height="5%" align="centre" cellspacing="2" cellpadding="3">
+     <table id="nav" border="1" width="100%" height="5%" align="centre" cellspacing="2" cellpadding="3">
           <tr align="centre" height="5">
-              <td valign="centre" bgcolor="white"><font color="red" face="Arial">
+              <td valign="center" ><font color="red" face="Arial">
                   <a href="Foodball%20accessories.html">Football accessories</a></font>
               </td> 
               <td valign="centre" bgcolor="white"><font color="red" face="Arial"><a href="Foodball%20clup%20jerseys.html">Jersey </a></font></td> 
